Fix graph canvas alignment

--- a/src/components/GraphView.module.css
+++ b/src/components/GraphView.module.css
@@ -17,7 +17,3 @@
   z-index: 2;
 }
 
-.container canvas {
-  width: 100% !important;
-  height: 100% !important;
-}
